--- a/product-detail.html
+++ b/product-detail.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Tooplate's Little Fashion - Product Detail</title>
+        <title>Fastickets - Product Detail</title>
 
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,13 +22,7 @@
         <link rel="stylesheet" href="css/slick.css"/>
 
         <link href="css/tooplate-little-fashion.css" rel="stylesheet">
-<!--
 
-Tooplate 2127 Little Fashion
-
-https://www.tooplate.com/view/2127-little-fashion
-
--->
     </head>
     
     <body>
@@ -48,7 +42,7 @@ https://www.tooplate.com/view/2127-little-fashion
                     </button>
 
                     <a class="navbar-brand" href="index.html">
-                        <strong><span>Little</span> Fashion</strong>
+                        <strong><span>Fas</span>tickets</strong>
                     </a>
 
                     <div class="d-lg-none">
@@ -64,11 +58,11 @@ https://www.tooplate.com/view/2127-little-fashion
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="about.html">Story</a>
+                                <a class="nav-link" href="about.html">About Us</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="products.html">Products</a>
+                                <a class="nav-link" href="products.html">Tickets</a>
                             </li>
 
                             <li class="nav-item">
@@ -96,70 +90,12 @@ https://www.tooplate.com/view/2127-little-fashion
                         <div class="col-lg-10 col-12">
                             <h1>
                                 <span class="d-block text-primary">We provide you</span>
-                                <span class="d-block text-dark">Fashionable Stuffs</span>
+                                <span class="d-block text-dark">High Quality Tickets</span>
                             </h1>
                         </div>
                     </div>
                 </div>
             </header>
-
-            <section class="product-detail section-padding">
-                <div class="container">
-                    <div class="row">
-
-                        <div class="col-lg-6 col-12">
-                            <div class="product-thumb">
-                                <img src="images/product/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg" class="img-fluid product-image" alt="">
-                            </div>
-                        </div>
-
-                        <div class="col-lg-6 col-12">
-                            <div class="product-info d-flex">
-                                <div>
-                                    <h2 class="product-title mb-0">Tree pot</h2>
-
-                                    <p class="product-p">Original package design from house</p>
-                                </div>
-
-                                <small class="product-price text-muted ms-auto mt-auto mb-5">$25</small>
-                            </div>
-
-                            <div class="product-description">
-
-                                <strong class="d-block mt-4 mb-2">Description</strong>
-
-                                <p class="lead mb-5">Over three years in business, We’ve had the chance to work on a variety of projects, with companies</p>
-                            </div>
-
-                            <div class="product-cart-thumb row">
-                                <div class="col-lg-6 col-12">
-                                    
-                                    <select class="form-select cart-form-select" id="inputGroupSelect01">
-                                        <option selected>Quantity</option>
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                    </select>
-                                </div>
-
-                                <div class="col-lg-6 col-12 mt-4 mt-lg-0">
-                                    <button type="submit" class="btn custom-btn cart-btn" data-bs-toggle="modal" data-bs-target="#cart-modal">Add to Cart</button>
-                                </div>
-
-                                <p>
-                                    <a href="#" class="product-additional-link">Details</a>
-
-                                    <a href="#" class="product-additional-link">Delivery and Payment</a>
-                                </p>
-                            </div>
-
-                        </div>
-
-                    </div>
-                </div>
-            </section>
 
             <section class="related-product section-padding border-top">
                 <div class="container">
@@ -172,7 +108,7 @@ https://www.tooplate.com/view/2127-little-fashion
                         <div class="col-lg-4 col-12 mb-3">
                             <div class="product-thumb">
                                 <a href="product-detail.html">
-                                    <img src="images/product/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg" class="img-fluid product-image" alt="">
+                                    <img src="https://img.freepik.com/premium-photo/travel-passport-excited-portrait-black-woman-studio-with-flight-documents-tickets-boarding-id-traveling-mockup-happy-girl-celebrate-immigration-usa-holiday-global-vacation_590464-170603.jpg?semt=ais_hybrid" class="img-fluid product-image" alt="">
                                 </a>
 
                                 <div class="product-top d-flex">
@@ -184,10 +120,10 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <div class="product-info d-flex">
                                     <div>
                                         <h5 class="product-title mb-0">
-                                            <a href="product-detail.html" class="product-title-link">Tree pot</a>
+                                            <a href="product-detail.html" class="product-title-link">Cheapeast</a>
                                         </h5>
 
-                                        <p class="product-p">Original package design from house</p>
+                                        <p class="product-p">affordable to all students inclusive</p>
                                     </div>
 
                                     <small class="product-price text-muted ms-auto mt-auto mb-5">$25</small>
@@ -198,7 +134,7 @@ https://www.tooplate.com/view/2127-little-fashion
                         <div class="col-lg-4 col-12 mb-3">
                             <div class="product-thumb">
                                 <a href="product-detail.html">
-                                    <img src="images/product/jordan-nix-CkCUvwMXAac-unsplash.jpeg" class="img-fluid product-image" alt="">
+                                    <img src="https://img.freepik.com/premium-photo/man-posing-studio_255757-5206.jpg?semt=ais_hybrid" class="img-fluid product-image" alt="">
                                 </a>
 
                                 <div class="product-top d-flex">
@@ -210,10 +146,10 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <div class="product-info d-flex">
                                     <div>
                                         <h5 class="product-title mb-0">
-                                            <a href="product-detail.html" class="product-title-link">Fashion set</a>
+                                            <a href="product-detail.html" class="product-title-link">Made for you</a>
                                         </h5>
 
-                                        <p class="product-p">Costume package</p>
+                                        <p class="product-p">Medium</p>
                                     </div>
 
                                     <small class="product-price text-muted ms-auto mt-auto mb-5">$35</small>
@@ -224,7 +160,7 @@ https://www.tooplate.com/view/2127-little-fashion
                         <div class="col-lg-4 col-12">
                             <div class="product-thumb">
                                 <a href="product-detail.html">
-                                    <img src="images/product/nature-zen-3Dn1BZZv3m8-unsplash.jpeg" class="img-fluid product-image" alt="">
+                                    <img src="https://img.freepik.com/premium-vector/man-stands-near-smartphone-screen-cinema-movie-ticket-admission-pass-admit-one_123447-5797.jpg?semt=ais_hybrid" class="img-fluid product-image" alt="">
                                 </a>
 
                                 <div class="product-top d-flex">
@@ -234,10 +170,10 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <div class="product-info d-flex">
                                     <div>
                                         <h5 class="product-title mb-0">
-                                            <a href="product-detail.html" class="product-title-link">Juice Drinks</a>
+                                            <a href="product-detail.html" class="product-title-link">Cinema</a>
                                         </h5>
 
-                                        <p class="product-p">Nature made another world</p>
+                                        <p class="product-p">High Budjet and Cost</p>
                                     </div>
 
                                     <small class="product-price text-muted ms-auto mt-auto mb-5">$45</small>
@@ -256,11 +192,10 @@ https://www.tooplate.com/view/2127-little-fashion
                 <div class="row">
 
                     <div class="col-lg-3 col-10 me-auto mb-4">
-                        <h4 class="text-white mb-3"><a href="index.html">Little</a> Fashion</h4>
-                        <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">Copyright © 2022 <strong>Little Fashion</strong></p>
+                        <h4 class="text-white mb-3"><a href="index.html">Fas</a>tickets</h4>
+                        <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">Copyright © 2022 <strong>Fastickets</strong></p>
                         <br>
-                        <p class="copyright-text">Designed by <a href="https://www.tooplate.com/" target="_blank">Tooplate</a></p>
-                    </div>
+                         </div>
 
                     <div class="col-lg-5 col-8">
                         <h5 class="text-white mb-3">Sitemap</h5>
