--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Tooplate's Little Fashion - About Page</title>
+        <title>Fastickets - About Page</title>
 
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,13 +23,6 @@
 
         <link href="css/tooplate-little-fashion.css" rel="stylesheet">
         
-<!--
-
-Tooplate 2127 Little Fashion
-
-https://www.tooplate.com/view/2127-little-fashion
-
--->
     </head>
     
     <body>
@@ -49,7 +42,7 @@ https://www.tooplate.com/view/2127-little-fashion
                     </button>
 
                     <a class="navbar-brand" href="index.html">
-                        <strong><span>Little</span> Fashion</strong>
+                        <strong><span>Fas</span>tickets</strong>
                     </a>
 
                     <div class="d-lg-none">
@@ -65,11 +58,11 @@ https://www.tooplate.com/view/2127-little-fashion
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link active" href="about.html">Story</a>
+                                <a class="nav-link active" href="about.html">About Us</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="products.html">Products</a>
+                                <a class="nav-link" href="products.html">Tickets</a>
                             </li>
 
                             <li class="nav-item">
@@ -96,8 +89,8 @@ https://www.tooplate.com/view/2127-little-fashion
 
                         <div class="col-lg-6 col-12 header-info">
                             <h1>
-                                <span class="d-block text-primary">Company</span>
-                                <span class="d-block text-dark">Fashion</span>
+                                <span class="d-block text-primary">Meet</span>
+                                <span class="d-block text-dark">Fastickets</span>
                             </h1>
                         </div>
                     </div>
@@ -137,7 +130,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
                                 <div class="team-info">
                                     <h5 class="mb-0">Kelly</h5>
-                                    <strong class="text-muted">Marketing</strong>
+                                    <strong class="text-muted">Marketer</strong>
 
                                     <!-- Button trigger modal -->
                                     <button type="button" class="btn custom-modal-btn" data-bs-toggle="modal" data-bs-target="#kelly">
@@ -172,46 +165,43 @@ https://www.tooplate.com/view/2127-little-fashion
                     <div class="row">
 
                         <div class="col-lg-9 mx-auto col-11">
-                            <h2 class="text-center">Customer love, <br> <span>Little</span> Fashion</h2>
+                            <h2 class="text-center">Customer love, <br> <span>Fas</span>tickets</h2>
 
                             <div class="slick-testimonial">
                                 <div class="slick-testimonial-caption">
-                                    <p class="lead">Over three years in business, We’ve had the chance to work on a variety of projects, with companies Lorem ipsum dolor sit amet</p>
+                                    <p class="lead">Over months in business, We’ve had the chance to sale tickets, cinema movie tickets, event and shows tickets with companies Lorem ipsum dolor sit amet</p>
 
                                     <div class="slick-testimonial-client d-flex align-items-center mt-4">
                                         <img src="images/people/senior-man-wearing-white-face-mask-covid-19-campaign-with-design-space.jpeg" class="img-fluid custom-circle-image me-3" alt="">
 
-                                        <span>George, <strong class="text-muted">Digital Art Fashion</strong></span>
+                                        <span>George, <strong class="text-muted">Digital Ticket Company</strong></span>
                                     </div>
                                 </div>
 
                                 <div class="slick-testimonial-caption">
-                                    <p class="lead">Over three years in business, We’ve had the chance to work on a variety of projects, with companies Lorem ipsum dolor sit amet</p>
-
+                                    <p class="lead">Over months in business, We’ve had the chance to sale tickets, cinema movie tickets, event and shows tickets with companies Lorem ipsum dolor sit amet</p>
                                     <div class="slick-testimonial-client d-flex align-items-center mt-4">
                                         <img src="images/people/beautiful-woman-face-portrait-brown-background.jpeg" class="img-fluid custom-circle-image me-3" alt="">
 
-                                        <span>Sandar, <strong class="text-muted">Zoom Fashion Idea</strong></span>
+                                        <span>Sandar, <strong class="text-muted">Dealailed Oriented Tickets</strong></span>
                                     </div>
                                 </div>
 
                                 <div class="slick-testimonial-caption">
-                                    <p class="lead">Over three years in business, We’ve had the chance to work on a variety of projects, with companies Lorem ipsum dolor sit amet</p>
-
+                                    <p class="lead">Over months in business, We’ve had the chance to sale tickets, cinema movie tickets, event and shows tickets with companies Lorem ipsum dolor sit amet</p>
                                     <div class="slick-testimonial-client d-flex align-items-center mt-4">
                                         <img src="images/people/portrait-british-woman.jpeg" class="img-fluid custom-circle-image me-3" alt="">
 
-                                        <span>Marie, <strong class="text-muted">Art Fashion Design</strong></span>
+                                        <span>Marie, <strong class="text-muted">High Quality Tickets</strong></span>
                                     </div>
                                 </div>
 
                                 <div class="slick-testimonial-caption">
-                                    <p class="lead">Over three years in business, We’ve had the chance to work on a variety of projects, with companies Lorem ipsum dolor sit amet</p>
-
+                                    <p class="lead">Over months in business, We’ve had the chance to sale tickets, cinema movie tickets, event and shows tickets with companies Lorem ipsum dolor sit amet</p>
                                     <div class="slick-testimonial-client d-flex align-items-center mt-4">
                                         <img src="images/people/woman-wearing-mask-face-closeup-covid-19-green-background.jpeg" class="img-fluid custom-circle-image me-3" alt="">
 
-                                        <span>Catherine, <strong class="text-muted">Dress Fashion</strong></span>
+                                        <span>Catherine, <strong class="text-muted">Tickets Mania</strong></span>
                                     </div>
                                 </div>
                             </div>
@@ -228,19 +218,18 @@ https://www.tooplate.com/view/2127-little-fashion
                 <div class="row">
 
                     <div class="col-lg-3 col-10 me-auto mb-4">
-                        <h4 class="text-white mb-3"><a href="index.html">Little</a> Fashion</h4>
-                        <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">Copyright © 2022 <strong>Little Fashion</strong></p>
+                        <h4 class="text-white mb-3"><a href="index.html">Fas</a>tickets</h4>
+                        <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">Copyright © 2022 <strong>Fastickets</strong></p>
                         <br>
-                        <p class="copyright-text">Designed by <a href="https://www.tooplate.com/" target="_blank">Tooplate</a></p>
-                    </div>
+                     </div>
 
                     <div class="col-lg-5 col-8">
                         <h5 class="text-white mb-3">Sitemap</h5>
 
                         <ul class="footer-menu d-flex flex-wrap">
-                            <li class="footer-menu-item"><a href="about.html" class="footer-menu-link">About</a></li>
+                            <li class="footer-menu-item"><a href="about.html" class="footer-menu-link">About Us</a></li>
 
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">Products</a></li>
+                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">Tickets</a></li>
 
                             <li class="footer-menu-item"><a href="#" class="footer-menu-link">Privacy policy</a></li>
 
@@ -282,7 +271,7 @@ https://www.tooplate.com/view/2127-little-fashion
                     </div>
 
                     <div class="modal-body">
-                        <h5 class="mb-4">Over three years in business had the chance to work on variety of projects, with companies</h5>
+                        <h5 class="mb-4">Over months in business, We’ve had the chance to sale tickets, cinema movie tickets, event and shows tickets with companies Lorem ipsum dolor sit amet/h5>
 
                         <div class="row mb-4">
                             <div class="col-lg-6 col-12">
@@ -370,7 +359,7 @@ https://www.tooplate.com/view/2127-little-fashion
                             <div class="col-lg-6 col-12">
                                 <p>Incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse commodo viverra.</p>
                             </div>
-                        </div>
+                            <h5 class="mb-4">Over months in business, We’ve had the chance to sale tickets, cinema movie tickets, event and shows tickets with companies Lorem ipsum dolor sit amet/h5>
 
                         <ul class="social-icon">
                             <li class="me-3"><strong>Where to find?</strong></li>
