--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 
         <link rel="stylesheet" href="css/slick.css"/>
 
-        <link href="css/tooplate-little-fashion.css" rel="stylesheet">
+        <link href="css/styles.css" rel="stylesheet">
         
     </head>
     
@@ -219,7 +219,7 @@
 
                     <div class="col-lg-3 col-10 me-auto mb-4">
                         <h4 class="text-white mb-3"><a href="index.html">Fas</a>tickets</h4>
-                        <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">Copyright © 2022 <strong>Fastickets</strong></p>
+                        <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">Copyright © 2024 <strong>Fastickets</strong></p>
                         <br>
                      </div>
 
