--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,7 @@
 		<link href="css/bootstrap-icons.css" rel="stylesheet" />
 
 		<link rel="stylesheet" href="css/slick.css" />
-
-		<link href="css/tooplate-little-fashion.css" rel="stylesheet" />
+		<link href="css/styles.css" rel="stylesheet" />
 	</head>
 
 	<body>
@@ -164,7 +163,7 @@
 										required
 										style="height: 160px"></textarea>
 
-									<label for="message">Tell us about the project</label>
+									<label for="message">Tell us about the event</label>
 								</div>
 
 								<div class="col-lg-5 col-6">
@@ -197,7 +196,7 @@
 									<h6 class="mb-3">Our Office</h6>
 
 									<p class="text-muted">
-										Akershusstranda 20, 0150 Oslo, Norway
+										Akershusstranda 20, 0150 Oslo, Nigeria
 									</p>
 								</div>
 
@@ -233,16 +232,16 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-3 col-10 me-auto mb-4">
-						<h4 class="text-white mb-3">
-							<a href="index.html">Little</a> Fashion
-						</h4>
+						<h4 class="text-white mb-3"><a href="index.html">Fas</a>ticket</h4>
 						<p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">
-							Copyright © 2024 <strong>Little Fashion</strong>
+							Copyright © 2024 <strong>Fasticket</strong>
 						</p>
 						<br />
 						<p class="copyright-text">
 							Designed by
-							<a href="https://www.tooplate.com/" target="_blank">Tooplate</a>
+							<a href="https://x.com/kingsleyesisi/" target="_blank">
+								KINGS WORLD
+							</a>
 						</p>
 					</div>
 
@@ -250,10 +249,6 @@
 						<h5 class="text-white mb-3">Sitemap</h5>
 
 						<ul class="footer-menu d-flex flex-wrap">
-							<li class="footer-menu-item">
-								<a href="about.html" class="footer-menu-link">Story</a>
-							</li>
-
 							<li class="footer-menu-item">
 								<a href="#" class="footer-menu-link">Products</a>
 							</li>
