Update text content and fix typos in index and product-detail pages and created a new index page

--- a/index.html
+++ b/index.html
@@ -104,14 +104,13 @@
 									<h1 class="slick-title">Fasticket</h1>
 
 									<p class="lead text-white mt-lg-3 mb-lg-5">
-										Discover a wide range of tickets for various events all over
-										Nigeria and experiences. Whether you're looking for the best
-										deals or premium options, Fasticket has you covered. Join us
-										and make your ticket purchasing experience seamless and
-										enjoyable.
+										Experience the ultimate ticket booking platform with Fasticket. 
+										From music concerts and movies to hotel bookings and more, 
+										we provide a seamless and enjoyable ticket purchasing experience. 
+										Join us and explore a world of events and experiences tailored just for you.
 									</p>
 
-									<a href="about.html" class="btn custom-btn"> Buy Now</a>
+									<a href="ticket.html" class="btn custom-btn"> Buy Now</a>
 								</div>
 							</div>
 						</div>
@@ -181,7 +180,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 text-center">
-							<h2 class="mb-5">Upcomming Events</h2>
+							<h2 class="mb-5">Upcoming Events</h2>
 						</div>
 
 						<div class="col-lg-4 col-12 mb-3">
@@ -283,7 +282,7 @@
 							</div>
 						</div>
 
-						<div class="col-12 text-center">
+						<div class="col-12 text-center"> 
 							<a href="products.html" class="view-all">View All Tickets</a>
 						</div>
 					</div>
@@ -297,7 +296,7 @@
 					<div class="col-lg-3 col-10 me-auto mb-4">
 						<h4 class="text-white mb-3"><a href="index.html">Fas</a>tickets</h4>
 						<p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">
-							Copyright © 2024 <strong>Fastickets</strong>
+							Copyright © 2024 <strong>Fasticket</strong>
 						</p>
 						<br />
 					</div>
