--- a/product-detail.html
+++ b/product-detail.html
@@ -229,7 +229,7 @@
 
 						<ul class="footer-menu d-flex flex-wrap">
 							<li class="footer-menu-item">
-								<a href="about.html" class="footer-menu-link">Story</a>
+								<a href="about.html" class="footer-menu-link"> About </a>
 							</li>
 
 							<li class="footer-menu-item">
