--- a/events.html
+++ b/events.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fasticket - Home</title>
+    <title>Fasticket - Events</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100">
 
     <!-- Header -->
-    <header class="bg-blue-600 text-white p-4">
+    <header class="bg-gray-900 text-white p-4">
         <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-3xl font-bold">Fasticket</h1>
+            <h1 class="text-3xl font-bold"><span class="text-red-600"> Fast</span>icket</h1>
             <button id="menu-toggle" class="md:hidden block">
                 <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
@@ -19,10 +19,10 @@
             </button>
             <div id="menu" class="hidden md:flex md:items-center md:w-auto w-full">
                 <nav class="md:flex md:items-center">
-                    <a href="#" class="block px-4 py-2 md:py-0">Home</a>
-                    <a href="#" class="block px-4 py-2 md:py-0">Events</a>
-                    <a href="#" class="block px-4 py-2 md:py-0">Hotels</a>
-                    <a href="#" class="block px-4 py-2 md:py-0">Contact</a>
+                    <a href="index.html" class="block px-4 py-2 md:py-0">Home</a>
+                    <a href="events.html" class="block px-4 py-2 md:py-0">Events</a>
+                    <a href="hotels.html" class="block px-4 py-2 md:py-0">Hotels</a>
+                    <a href="contact.html" class="block px-4 py-2 md:py-0">Contact</a>
                 </nav>
             </div>
             <script>
@@ -34,63 +34,39 @@
         </div>
     </header>
 
-    <!-- Hero Section -->
-    <section class="bg-cover bg-center h-screen" style="background-image: url('https://source.unsplash.com/1600x900/?concert,hotel');">
-        <div class="bg-black bg-opacity-50 h-full flex items-center justify-center">
-            <div class="text-center text-white">
-                <h2 class="text-5xl font-bold mb-4 animate-bounce">Welcome to Fasticket</h2>
-                <p class="text-xl mb-8">Your one-stop platform for event tickets and hotel bookings</p>
-                <a href="#" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Get Started</a>
-            </div>
-        </div>
-    </section>
-
-    <!-- Features Section -->
+    <!-- Events Section -->
     <section class="py-12">
         <div class="container mx-auto text-center">
-            <h2 class="text-4xl font-bold mb-8">Our Features</h2>
+            <h2 class="text-4xl font-bold mb-8">Upcoming Events</h2>
             <div class="flex flex-wrap justify-center">
                 <div class="w-full md:w-1/3 p-4">
                     <div class="bg-white p-6 rounded-lg shadow-lg transform hover:scale-105 transition-transform">
                         <img src="https://source.unsplash.com/400x300/?concert" alt="Concert" class="w-full h-48 object-cover rounded-t-lg">
-                        <h3 class="text-2xl font-bold mt-4">Event Tickets</h3>
-                        <p class="mt-2">Book tickets for the latest events and concerts.</p>
+                        <h3 class="text-2xl font-bold mt-4">Concert 1</h3>
+                        <p class="mt-2">Join us for an amazing night of music and fun.</p>
+                        <a href="#" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-4 inline-block">Buy Tickets</a>
                     </div>
                 </div>
                 <div class="w-full md:w-1/3 p-4">
                     <div class="bg-white p-6 rounded-lg shadow-lg transform hover:scale-105 transition-transform">
-                        <img src="https://source.unsplash.com/400x300/?hotel" alt="Hotel" class="w-full h-48 object-cover rounded-t-lg">
-                        <h3 class="text-2xl font-bold mt-4">Hotel Booking</h3>
-                        <p class="mt-2">Find and book the best hotels at great prices.</p>
+                        <img src="https://source.unsplash.com/400x300/?festival" alt="Festival" class="w-full h-48 object-cover rounded-t-lg">
+                        <h3 class="text-2xl font-bold mt-4">Festival 1</h3>
+                        <p class="mt-2">Experience the best festival with great music and food.</p>
+                        <a href="#" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-4 inline-block">Buy Tickets</a>
                     </div>
                 </div>
                 <div class="w-full md:w-1/3 p-4">
                     <div class="bg-white p-6 rounded-lg shadow-lg transform hover:scale-105 transition-transform">
-                        <img src="https://source.unsplash.com/400x300/?travel" alt="Travel" class="w-full h-48 object-cover rounded-t-lg">
-                        <h3 class="text-2xl font-bold mt-4">Travel Packages</h3>
-                        <p class="mt-2">Explore our exclusive travel packages.</p>
+                        <img src="https://source.unsplash.com/400x300/?theater" alt="Theater" class="w-full h-48 object-cover rounded-t-lg">
+                        <h3 class="text-2xl font-bold mt-4">Theater 1</h3>
+                        <p class="mt-2">Enjoy a night of drama and excitement at our theater.</p>
+                        <a href="#" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-4 inline-block">Buy Tickets</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-<!-- Loading -->
-<div id="loading" class="fixed inset-0 bg-white flex items-center justify-center z-50">
-    <svg class="animate-spin h-10 w-10 text-blue-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-        <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-        <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
-    </svg>
-</div>
-
-<script>
-    document.addEventListener("DOMContentLoaded", function() {
-        setTimeout(function() {
-            var loading = document.getElementById('loading');
-            loading.style.display = 'none';
-        }, 200); // 3 seconds delay
-    });
-</script>
     <!-- Footer -->
     <footer class="bg-black text-white py-8">
         <div class="container mx-auto">
