--- a/events.html
+++ b/events.html
@@ -41,7 +41,7 @@
             <div class="flex flex-wrap justify-center">
                 <div class="w-full md:w-1/3 p-4">
                     <div class="bg-white p-6 rounded-lg shadow-lg transform hover:scale-105 transition-transform">
-                        <img src="https://source.unsplash.com/400x300/?concert" alt="Concert" class="w-full h-48 object-cover rounded-t-lg">
+                        <img src="images/event.jpeg" alt="Concert" class="w-full h-48 object-cover rounded-t-lg">
                         <h3 class="text-2xl font-bold mt-4">Concert 1</h3>
                         <p class="mt-2">Join us for an amazing night of music and fun.</p>
                         <a href="#" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-4 inline-block">Buy Tickets</a>
