changed some images

--- a/events.html
+++ b/events.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="w-full md:w-1/3 p-4">
                     <div class="bg-white p-6 rounded-lg shadow-lg transform hover:scale-105 transition-transform">
-                        <img src="https://source.unsplash.com/400x300/?festival" alt="Festival" class="w-full h-48 object-cover rounded-t-lg">
+                        <img src="images/event.jpeg" alt="Festival" class="w-full h-48 object-cover rounded-t-lg">
                         <h3 class="text-2xl font-bold mt-4">Festival 1</h3>
                         <p class="mt-2">Experience the best festival with great music and food.</p>
                         <a href="#" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-4 inline-block">Buy Tickets</a>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="w-full md:w-1/3 p-4">
                     <div class="bg-white p-6 rounded-lg shadow-lg transform hover:scale-105 transition-transform">
-                        <img src="https://source.unsplash.com/400x300/?theater" alt="Theater" class="w-full h-48 object-cover rounded-t-lg">
+                        <img src="images/concert 3.jpeg" alt="Theater" class="w-full h-48 object-cover rounded-t-lg">
                         <h3 class="text-2xl font-bold mt-4">Theater 1</h3>
                         <p class="mt-2">Enjoy a night of drama and excitement at our theater.</p>
                         <a href="#" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-4 inline-block">Buy Tickets</a>
